# ChessVariant

./: .gitignore  CMakeLists.txt  Case.cpp  Case.h  Cavalier.cpp  Cavalier.h  Couleur.cpp  Couleur.h  Deplacement.cpp  Deplacement.h  Fou.cpp  Fou.h  Partie.cpp  Partie.h  Piece.cpp  Piece.h  Pion.cpp  Pion.h  Plateau.cpp  Plateau.h  Position.cpp  Position.h  README.md  Reine.cpp  Reine.h  Roi.cpp  Roi.h  Tour.cpp  Tour.h  main.cpp
